More event work
- Added localisation
- Finished relationship events
- Finished throne-grabbing events

--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -1,74 +1,28 @@
 ﻿l_english:
- cyrodiil_reunify.EVTNAME2: "Anvil is ours!"
- cyrodiil_reunify.EVTNAME4: "Kvatch is ours!"
- cyrodiil_reunify.EVTNAME6: "Chorrol is ours!"
- cyrodiil_reunify.EVTNAME8: "Bravil is ours!"
- cyrodiil_reunify.EVTNAME10: "Bruma is ours!"
- cyrodiil_reunify.EVTNAME12: "Cheydinhal is ours!"
- cyrodiil_reunify.EVTNAME14: "Leyawiin is ours!"
- cyrodiil_reunify.EVTNAME16: "Skingrad is ours!"
- cyrodiil_reunify.EVTNAME18: "The Imperial City is ours!"
- cyrodiil_reunify.EVTDESC2: "We have taken control of the great city of Anvil! We must bring the rest of County Anvil under our control!"
- cyrodiil_reunify.EVTDESC4: "We have taken control of the great city of Kvatch! We must bring the rest of County Kvatch under our control!"
- cyrodiil_reunify.EVTDESC6: "We have taken control of the great city of Chorrol! We must bring the rest of County Chorrol under our control!"
- cyrodiil_reunify.EVTDESC8: "We have taken control of the great city of Bravil! We must bring the rest of County Bravil under our control!"
- cyrodiil_reunify.EVTDESC10: "We have taken control of the great city of Bruma! We must bring the rest of County Bruma under our control!"
- cyrodiil_reunify.EVTDESC12: "We have taken control of the great city of Cheydinhal! We must bring the rest of County Cheydinhal under our control!"
- cyrodiil_reunify.EVTDESC14: "We have taken control of the great city of Leyawiin! We must bring the rest of County Leyawiin under our control!"
- cyrodiil_reunify.EVTDESC16: "We have taken control of the great city of Skingrad! We must bring the rest of County Skingrad under our control!"
- cyrodiil_reunify.EVTDESC18: "We have taken control of the Imperial City and the Ruby Throne! Although Cyrodiil has fallen to anarchy, we shall unite these lands once again! Our first step should be taking back the Cyrodilic heartlands."
- cyrodiil_reunify.EVTOPTA2: "For the Empire!"
- cyrodiil_reunify.EVTOPTA4: "For the Empire!"
- cyrodiil_reunify.EVTOPTA6: "For the Empire!"
- cyrodiil_reunify.EVTOPTA8: "For the Empire!"
- cyrodiil_reunify.EVTOPTA10: "For the Empire!"
- cyrodiil_reunify.EVTOPTA12: "For the Empire!"
- cyrodiil_reunify.EVTOPTA14: "For the Empire!"
- cyrodiil_reunify.EVTOPTA16: "For the Empire!"
- cyrodiil_reunify.EVTOPTA18: "For the Empire!"
- cyrodiil_reunify.EVTNAME20: "Ruby Throne Lost!"
- cyrodiil_reunify.EVTDESC20: "We have lost the Imperial City and the Ruby throne to the enemy! All our claims in Cyrodiil are now forfeit!"
- cyrodiil_reunify.EVTOPTA20: "Damnit!"
- cyrodiil_flag.EVTNAME2: "You are a Cyrodilic Count!"
- cyrodiil_flag.EVTDESC2: "This is so behind the scenes stuff works."
- cyrodiil_flag.EVTOPTA2: "Alrighty then"
- cyrodiil_flag.EVTNAME4: "The Ruby Throne is ours!"
- cyrodiil_flag.EVTDESC4: "We have taken the Ruby Throne and our glorious leader $MONARCH$ has been crowned Emperor of Cyrodiil! Now all we need to do is get everyone else to recognize the our legitimacy."
- cyrodiil_flag.EVTOPTA4: "And we shall!"
- cyrodiil_flag.EVTNAME6: "Imperial-County relations"
- cyrodiil_flag.EVTDESC6: "Because our glorious leader $MONARCH$ is sat upon the Ruby Throne, the various counties of Cyrodiil are inclined to be friendly toward us!"
- cyrodiil_flag.EVTOPTA6: "We shall prove to them we are the rightful heirs to the Empire!"
- cyrodiil_flag.EVTNAME8: "Inter-Country Relations"
- cyrodiil_flag.EVTDESC8: "We share a common interest with every other Cyrodilic count out there. We all have lost territory to these vile warlords and wish to regain our respective territories. As a result, we are less inclined to fight amonst ourselves."
- cyrodiil_flag.EVTOPTA8: "Power in numbers, I suppose"
  cyrodiil_count_emperor: "Imperial-County Relations"
- cyrodiil_count_county: "Inter-Country Relations"
- cyrodiil_reunify.EVTNAME22: "Imperial City Occupied!"
- cyrodiil_reunify.EVTDESC22: "We have occupied the Imperial City! The Imperial Isle is ours!"
- cyrodiil_reunify.EVTOPTA22: "Excellent!"
- cyrodiil_reunify.EVTNAME23: "Situation Stabilized!"
- cyrodiil_reunify.EVTDESC23: "For many years, we have been in control of the Imperial City and the Ruby Throne. We can now finally officially claim to be the true successors to the Cyrodilic Empire!"
- cyrodiil_reunify.EVTOPTA23: "Cyrodiil shall rise again!"
- cyrodiil_reunify.EVTNAME24: "An invitation to join the Empire"
- cyrodiil_reunify.EVTDESC24: "[Y55.Monarch.GetName], the Emperor of Cyrodiil, has formally invited us to join the Empire! Shall we accept?"
- cyrodiil_reunify.EVTOPTA24: "We accept!"
- cyrodiil_reunify.EVTOPTB24: "Absolutely not!"
- cyrodiil_reunify.EVTNAME25: "$FROMCOUNTRY$ joins the Empire!"
- cyrodiil_reunify.EVTDESC25: "$FROMCOUNTRY$ has decided to join the empire!"
- cyrodiil_reunify.EVTOPTA25: "Excellent!"
- cyrodiil_reunify.EVTNAME26: "$FROMCOUNTRY$ refuses to join the Empire!"
- cyrodiil_reunify.EVTDESC26: "$FROMCOUNTRY$ has refused to join the empire!"
- cyrodiil_reunify.EVTOPTA26: "Damn!"
- cyrodiil_flag.EVTNAME10: "Warlord relations!"
- cyrodiil_flag.EVTDESC10: "Everybody hates us!"
- cyrodiil_flag.EVTOPTA10: "Okay"
- cyrodiil_flag.EVTNAME12: "Imperial relations!"
- cyrodiil_flag.EVTDESC12: "The new emperor hates us!"
- cyrodiil_flag.EVTOPTA12: "Okay"
+ cyrodiil_count_count: "Inter-Country Relations"
  cyrodiil_warlord_other_opinion: "Cyrodilic Warlord"
- cyrodiil_religion.1.t: "People Turn to Daedra Worship"
- cyrodiil_religion.1.d: "The people in one of our provinces are now worshiping Daedra"
- cyrodiil_religion.1.a: "An interesting development"
+ tamriel_religion.1.t: "People Turn to Daedra Worship"
+ tamriel_religion.1.d: "The people in one of our provinces are now worshiping Daedra"
+ tamriel_religion.1.a: "An interesting development"`
+ cyrodiil.4.t: "The Fall of the Imperial City"
+ cyrodiil.4.d: "The Imperial City has been captured by foreign invaders! The last bastion of the old Imperial rule has been wiped out"
+ cyrodiil.4.a: "Oh no!"
+ cyrodiil.5.t: "The Ruby Throne"
+ cyrodiil.5.d: "With the conquest of The Imperial City, our leader $MONARCH$ has taken their rightful place on the Ruby Throne. Now all we need to do is wrench the rest of the Empire away from the other petty warlords."
+ cyrodiil.5.a: "All Hail $MONARCH$!"
+ cyrodiil.6.t: "The Ruby Throne Lost!"
+ cyrodiil.6.d: "We have lost the Imperial City and the Ruby throne to the enemy! All our claims in Cyrodiil are now forfeit!"
+ cyrodiil.6.a: "Damnation!"
+ cyrodiil.7.t: "Situation Stabilized"
+ cyrodiil.7.d: "For many years, we have been in control of the Imperial City and the Ruby Throne. We have proven we are the true successors to the Cyrodilic Empire!"
+ cyrodiil.7.a: "Cyrodiil shall rise again!"
+ cyrodiil.8.t: "Counties/Towns Join Empire"
+ cyrodiil.8.d: "Counties/Towns Join Empire"
+ cyrodiil.8.a: "Ok"
+ cyrodiil.9.t: "Former Tamriel Provinces Join Empire"
+ cyrodiil.9.d: "Former Tamriel Provinces Join Empire"
+ cyrodiil.9.a: "Ok"
  voidnights.1.t: "The Void Nights"
  voidnights.1.d: "The Moons Masser and Secunda have mysteriously disappeared from the night sky! At this time, we are unsure if this is merely an illusion or something more sinister. Regardless, this has understandably upset a large amount of the population, especially the Khajiit."
  voidnights.1.a: "Hopefully this isn't permanent!"
