New Unification System v1.0
First pass of new unification system done:
- 2 New subject types related to Empire
- 3 New decisions about the end of the Interregnum and unification of
Tamriel
- Slightly adjusted formables to exclude emperor
- Many events related to unification of Tamriel
- Cleaned up localisation a bit

TODO:
- Keep tweaking subject types so the AI doesn't do anything stupid
- Special causus beli/diplo interaction to add states into the empire
- Possible event where Elsweyr joins empire if they survive the coup?
- A bit more balancing. Cyrodiil is VERY aggressive and OP

--- a/localisation/tamriel_decisions_l_english.yml
+++ b/localisation/tamriel_decisions_l_english.yml
@@ -39,11 +39,14 @@
  form_elsweyr_desc: "Unite the Khajiit of Elswer under one banner!"
  form_indoril_title: "Revive the Great House Indoril"
  form_indoril_desc: "House Indoril still technically exists, although it is a mere formality compared to the Temple administration itself. However, seeing as we are now stronger than ever before, asserting that we are a free House of our own may be advantageous."
- unify_cyrodiil_invitation_title: "Unify Cyrodiil"
- unify_cyrodiil_invitation_desc: "Invite the independent counties and republics of Cyrodiil to join our legions!"
- join_the_empire_title: "Join the Empire"
- join_the_empire_desc: "The Empire of Cyrodiil has been reborn. Shall we join their legions?"
- acceptance_conditions_unification: "Countries with relations of +100 or more will join! Empire ranked countries will NOT join! Daedra Worshiping countries will NOT join if we are Nine Divines worshiping and vice versa!"
+ tamriel_end_interregnum_title: "End The Stormcrown Interregnum"
+ tamriel_end_interregnum_desc: "Declare the end of The Stormcrown Interregnum!"
+ form_cyrodiil_title: "Form Cyrodiil"
+ form_cyrodiil_desc: "Formally declare ourselves The Imperial Province of Cyrodiil!"
+ invite_core_provinces_title: "Invite Cyrodilic States Into The Empire"
+ invite_core_provinces_desc: "Now that the Stormcrown Interregnum is over, we can start to reconsolidate the Imperial Province of Cyrodiil"
+ invite_other_provinces_title: "Invite The Other Provinces Into The Empire"
+ invite_other_provinces_desc: "Now that the Stormcrown Interregnum is over, we can start to reestablish our rule over the remaining provinces of The Empire"
  restore_almalexia_title: "Rebuild Almalexia"
  restore_almalexia_desc: "Restore Almalexia to it's former glory!"
  form_indoril_title: "Revive the Great House Indoril"
