--- a/localisation/tamriel_events_l_english.yml
+++ b/localisation/tamriel_events_l_english.yml
@@ -9,20 +9,23 @@
  cyrodiil.4.d: "The Imperial City has been captured by foreign invaders! The last bastion of the old Imperial rule has been wiped out"
  cyrodiil.4.a: "Oh no!"
  cyrodiil.5.t: "The Ruby Throne"
- cyrodiil.5.d: "With the conquest of The Imperial City, our leader $MONARCH$ has taken their rightful place on the Ruby Throne. Now all we need to do is wrench the rest of the Empire away from the other petty warlords."
- cyrodiil.5.a: "All Hail $MONARCH$!"
+ cyrodiil.5.d: "With the conquest of The Imperial City, [Root.Monarch.GetTitle] [Root.Monarch.GetName] has taken [Root.Monarch.GetHerHis] rightful place on the Ruby Throne. Now all [Root.Monarch.GetSheHe] needs to do is wrench the rest of the Empire away from the other petty warlords."
+ cyrodiil.5.a: "All Hail [Root.Monarch.GetName]! All Hail The [Root.Monarch.Dynasty.GetName] Dynasty!"
  cyrodiil.6.t: "The Ruby Throne Lost!"
  cyrodiil.6.d: "We have lost the Imperial City and the Ruby throne to the enemy! All our claims in Cyrodiil are now forfeit!"
  cyrodiil.6.a: "Damnation!"
- cyrodiil.7.t: "Situation Stabilized"
- cyrodiil.7.d: "For many years, we have been in control of the Imperial City and the Ruby Throne. We have proven we are the true successors to the Cyrodilic Empire!"
- cyrodiil.7.a: "Cyrodiil shall rise again!"
- cyrodiil.8.t: "Counties/Towns Join Empire"
- cyrodiil.8.d: "Counties/Towns Join Empire"
- cyrodiil.8.a: "Ok"
- cyrodiil.9.t: "Former Tamriel Provinces Join Empire"
- cyrodiil.9.d: "Former Tamriel Provinces Join Empire"
- cyrodiil.9.a: "Ok"
+ cyrodiil.7.t: "End of The Stormcrown Interregnum"
+ cyrodiil.7.d: "For many years, we have been in control of the Imperial City and the Ruby Throne. We have proven to the world we are the true successors to the Empire of Tamriel!"
+ cyrodiil.7.a: "For The Empire!"
+ cyrodiil.8.t: "Invitation from The Empire of Tamriel"
+ cyrodiil.8.d: "The Empire of Tamriel, led by a resurgent Cyrodiil, has invited us to join their Empire. We can either join them directly, or join them as an Imperial Province. Refusing their offer might lead to hostilities."
+ cyrodiil.8.a: "Join The Empire directly"
+ cyrodiil.8.b: "Join The Empire as an Imperial State"
+ cyrodiil.8.c: "Refuse their offer"
+ cyrodiil.9.t: "Invitation from The Empire of Tamriel"
+ cyrodiil.9.d: "The Empire of Tamriel, led by a resurgent Cyrodiil, has petitioned our government to re-establish their rule over our lands in exchange for protection against hostile forces. Joining The Empire would give few downsides, but would restrict any kind of expansionist ambitions into Cyrodiil. Refusing their offer might lead to hostilities."
+ cyrodiil.9.a: "Join The Empire as an Imperial State"
+ cyrodiil.9.b: "Refuse their offer"
  voidnights.1.t: "The Void Nights"
  voidnights.1.d: "The Moons Masser and Secunda have mysteriously disappeared from the night sky! At this time, we are unsure if this is merely an illusion or something more sinister. Regardless, this has understandably upset a large amount of the population, especially the Khajiit."
  voidnights.1.a: "Hopefully this isn't permanent!"
