2nd way of balancing changes
- Added 5 new countries in cyrodiil. 3 towns, 2 warlords.
- Reduced size of starting counties
- Reduced number of cities to end interregnum
- Warlords can no longer form counties before the end of the interregnum
(temp?)
- Fixed warlord annexation events
- Moved Jerall to Colovian group, made some provinces in the east
Valusian
- Westwatch (new town) is now a march of Skingrad on border of Elsweyr
- Imperial city now produces silk
- Added fort to Vilverin to prevent Sercen from winning the starting war
every time

--- a/localisation/tamriel_countries_l_english.yml
+++ b/localisation/tamriel_countries_l_english.yml
@@ -206,6 +206,11 @@
  Y57: "Colovia"
  Y58: "Nibenay"
  Y59: "Blankenmarch"
+ Y60: "Harm's Folly"
+ Y61: "Westwatch"
+ Y62: "Ninendava"
+ Y63: "Applewatch"
+ Y64: "Grief"
  YAL: "Alabaster"
  YAH: "Ahkhai"
  YCO: "Corinth"
@@ -290,6 +295,11 @@
  Y57_ADJ: "Colovian"
  Y58_ADJ: "Nibenese"
  Y59_ADJ: "Blankenmarch"
+ Y60_ADJ: "Harm's Folly"
+ Y61_ADJ: "Westwatch"
+ Y62_ADJ: "Ninendava"
+ Y63_ADJ: "Applewatch"
+ Y64_ADJ: "Grief"
  YAL_ADJ: "Alabasterian"
  YAH_ADJ: "Ahkhain"
  YCO_ADJ: "Corinthian"
